--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KBMVJZ5');</script>
+})(window,document,'script','dataLayer','GTM-0000000');</script>
 <!-- End Google Tag Manager -->
  
   <!-- Global site tag (gtag.js) - Google Analytics -->
- <script async src="https://www.googletagmanager.com/gtag/js?id='UA-206370536-1"></script>
+ <script async src="https://www.googletagmanager.com/gtag/js?id='UA-000000000-0"></script>
  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-206370536-1');
+  gtag('config', 'UA-000000000-0');
  </script>
  
  </head>
@@ -141,7 +141,7 @@ var getOutboundLink = function(url) {
 <body>
 
  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBMVJZ5"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-0000000"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
  
@@ -150,9 +150,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="container">
     <div class="card">
-      <img class="marginauto" src="images/LincolnSM_Logo_LiveWork_blue.png" alt="Logo" style="width: auto; height: 100px"> 
-     <h2 style="text-align: center;" markdown="1"><b style="color:#0081ae;"><p style="font-family:calibri"> The Live-work lifestyle at one of Santa Monica’s most bustling intersections!</p></h2></b> 
-     <h2 style="text-align: center;" markdown="1"><b style="color:#0081ae;"><p style="font-family:calibri"> Explore 3D & 4D Augmented Reality on Mobile Device!</p></h2></b>
+      <img class="marginauto" src="images/Company Here.jpg" alt="Logo" style="width: auto; height: 100px"> 
+      <h2 style="text-align: center;" markdown="1"><b style="color:#4D008C;"><p style="font-family:Avenir Next LT Pro"> COMING SOON</p></h2></b>
+      <h2 style="text-align: center;" markdown="1"><b style="color:#4D008C;"><p style="font-family:Avenir Next LT Pro"> Details to Follow</p></h2></b>
+      <h3 style="text-align: center;" markdown="1"><b style="color:#f93822;"><p style="font-family:Avenir Next LT Pro"> UNDER CONSTRUCTION!</p></h3></b>
      </div>
      <div class="card"> 
     <model-viewer src="Models/Lincoln Unit A_4.glb" poster="images/Lincoln_.05s.png" shadow-intensity="1" ar ar-modes="webxr scene-viewer quick-look" camera-controls autoplay camera-orbit="180deg 25deg 90%" id="reveal" loading="eager" alt="A 3D model carousel" style="width: 100%; height: 600px">
@@ -347,13 +348,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </script> -->
                                          
    <div class="card">
-     <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>LEARN:</b><a href="https://www.thewestsidecollection.com/lincoln-sm-live-work-santa-monica-ca/?utm_source=AVERtek&utm_medium=AR" onclick="getOutboundLink('https://www.thewestsidecollection.com/lincoln-sm-live-work-santa-monica-ca/?utm_source=AVERtek&utm_medium=AR');return false;"><b style="color:#0081ae;"><b> MORE</b></b></h2></a></p></a></h2>
-     <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>WALK OUR NEIGHBORHOOD:</b><a href="https://www.google.com/maps/@34.0185555,-118.4893568,3a,75y,266.59h,89.73t/data=!3m6!1e1!3m4!1so26J0FdnnxU1OeoAng9mmQ!2e0!7i16384!8i8192?utm_source=AVERtek&utm_medium=AR" onclick="getOutboundLink('https://www.google.com/maps/@34.0185555,-118.4893568,3a,75y,266.59h,89.73t/data=!3m6!1e1!3m4!1so26J0FdnnxU1OeoAng9mmQ!2e0!7i16384!8i8192?utm_source=AVERtek&utm_medium=AR');return false;"><b style="color:#0081ae;"><b> HERE</b></b></h2></a></p></a></h2>
-     <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>SPECIAL:</b><a href="mailto:LincolnSM.AVERtekSMLW.SaresRegis@aptleasing.info?subject=Requesting%20VIP%20Tour&body=Please contact me for a VIP tour of Lincoln SM Live/Work apartments."<b style="color:#0081ae;"> REQUEST VIP TOUR</a></b></h2></p>
+     <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>BREADCRUMB ONE:</b><a href="https://www.thewestsidecollection.com/lincoln-sm-live-work-santa-monica-ca/?utm_source=AVERtek&utm_medium=AR" onclick="getOutboundLink('https://www.thewestsidecollection.com/lincoln-sm-live-work-santa-monica-ca/?utm_source=AVERtek&utm_medium=AR');return false;"><b style="color:#0081ae;"><b> MORE</b></b></h2></a></p></a></h2>
+     <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>BREADCRUMB TWO:</b><a href="https://www.google.com/maps/@34.0185555,-118.4893568,3a,75y,266.59h,89.73t/data=!3m6!1e1!3m4!1so26J0FdnnxU1OeoAng9mmQ!2e0!7i16384!8i8192?utm_source=AVERtek&utm_medium=AR" onclick="getOutboundLink('https://www.google.com/maps/@34.0185555,-118.4893568,3a,75y,266.59h,89.73t/data=!3m6!1e1!3m4!1so26J0FdnnxU1OeoAng9mmQ!2e0!7i16384!8i8192?utm_source=AVERtek&utm_medium=AR');return false;"><b style="color:#0081ae;"><b> HERE</b></b></h2></a></p></a></h2>
+     <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>BREADCRUMB THREE:</b><a href="mailto:LincolnSM.AVERtekSMLW.SaresRegis@aptleasing.info?subject=Requesting%20VIP%20Tour&body=Please contact me for a VIP tour of Lincoln SM Live/Work apartments."<b style="color:#0081ae;"> REQUEST VIP TOUR</a></b></h2></p>
      <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>CALL:</b><a href="tel:+18333495305"><b style="color:#0081ae;"> 833-349-5305</a></b></b></p></h2>
      <h2 style="text-align: center;" markdown="1"><p style="font-family:calibri"><b>CONTACT:</b><a href="https://www.thewestsidecollection.com/lincoln-sm-live-work-santa-monica-ca/contact?utm_source=AVERtek&utm_medium=AR" onclick="getOutboundLink('https://www.thewestsidecollection.com/lincoln-sm-live-work-santa-monica-ca/contact?utm_source=AVERtek&utm_medium=AR');return false;"><b style="color:#0081ae;"><b> US</b></b></h2></a></p></a></h2> 
      <br>
-     <h2 style="text-align: center;" markdown="1"><b style="color:#000000;"><p style="font-family:calibri"> 1447 Lincoln Blvd, Santa Monica, CA 90401 </p></h2></b>
+     <h2 style="text-align: center;" markdown="1"><b style="color:#000000;"><p style="font-family:calibri"> 12345 Any Blvd, City, CA 00000</p></h2></b>
    </div>
    
    <div class="card">
